adicionado variavel de ambiente para fazer deploy no heroku

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "back-end",
   "version": "0.0.0",
   "private": true,
+  "engines": { 
+    "node": "10.16.0" 
+  },  
   "scripts": {
     "start": "nodemon node ./bin/www",
     "dev": "nodemon"
